--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,16 @@
-.container {
-  display: flex;
-  align-content: center;
-}
-
 .main {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  width: 100%;
+}
+
+.title {
+  margin-left: 15%;
+}
+
+.container {
+  display: flex;
+  align-items: center;
 }
