--- a/src/components/Input/input.styles.css
+++ b/src/components/Input/input.styles.css
@@ -1,8 +1,12 @@
 .form {
   border: 1px solid black;
   margin-left: 10px;
-  height: 35px;
+  height: 24px;
+  width: 90px;
   border-radius: 4px;
+  background-color: #fbeff5;
+  color: #848484;
+  font-size: 12px;
 }
 
 .cepButton {
