--- a/src/styles.css
+++ b/src/styles.css
@@ -1,18 +1,23 @@
+html {
+  background-color: #a9f5f2;
+}
+
 .main {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   width: 100%;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
 }
 
 .title {
   margin-left: 15%;
+  font-size: 24px;
 }
 
 .container {
   display: flex;
   align-items: center;
-  margin-top: 10px;
+  margin-top: 50px;
 }
