--- a/src/components/Button/button.styles.css
+++ b/src/components/Button/button.styles.css
@@ -4,5 +4,8 @@
   margin-left: 25%;
   margin-bottom: 35px;
   border-radius: 4px;
-  
+
+  background-color: #fff;
+  box-shadow: none;
+  outline: none;
 }
